compiler/weave_syntax/tests/data/Numbers.error
error: Expected '[token:identifier]'
        --> <source>:4:1
         |
       4 | 3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:6:1
         |
       6 | 3.3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:6:5
         |
       6 | 3.3.3.3
         |     ^^^
error: Expected '[token:identifier]'
        --> <source>:12:3
         |
      12 | 0._
         |   ^
error: Unexpected tokens
        --> <source>:12:3
         |
      12 | 0._
         |   ^
      13 | 0._3
         | ^^^^
      14 | 0._3_
         | ^^^^^
     ... |
     118 | 0x1111.111p+111
         | ^^^^^^^^^^^^^^^
     119 | 0b1111_1111.101e+101
         | ^^^^^^^^^^^^^^^^^^^^
     120 | 21.37m32
         | ^^^^^^^^
